--- a/Web/views/pages/admin-status-messages.ejs
+++ b/Web/views/pages/admin-status-messages.ejs
@@ -232,7 +232,7 @@
                                     </button>
                                     <img src="<%= message.avatar %>"
                                          class="is-avatar is-small"
-                                         alt="<%= message.id %>">
+                                         alt="<%= message.name %>'s Avatar">
                                     <%= message.name %>
                                 </li>
                                 <% }); %>
